k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  id: autoslp-ingress
  name: autoslp-ingress
  namespace: autoslp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/websocket-services: "autoslp-backend-service"
spec:
  tls:
    - hosts:
        - autoslp.com
        - api.autoslp.com
      secretName: autoslp-tis-cert-prod
  rules:
    - host: autoslp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoslp-frontend-service
                port:
                  number: 80
    - host: api.autoslp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoslp-backend-service
                port:
                  number: 4000
